# nlp_agent_intent

./: .gitignore  .gitmodules  Dockerfile  FasttextWrapper.md  README.md  environment.yml  example.py  examples.py  fasttext_default.py  intent_agent.py  main.py  predict.py  train.py  variable.py
doc/: API.md
doc/api/: template.md
doc/api/app/: Add_App.md  delete_App.md  get_App.md  get_Apps.md
doc/api/examples/: Add_Batch_Labels.md  Add_Label.md  Batch_Add_Labels.md  Delete_Label.md  Get_Label.md  Review_Labeled_Utterances.md  delete_Example_Labels.md
doc/api/export/: Export_Application.md
doc/api/import/: Import_Application.md
doc/api/intent/: Create_Intent_Classifier.md  delete_Intent_Model.md  get_Intent_Info.md  get_Intent_Infos.md
doc/api/predict/: get_Trained_Model_Predictions.md
doc/api/train/: Train.md  Training_Status.md
env/: requirements.txt
example/: intent_agent_api.json
fasttext/: _fasttext.pyd  fasttext.py
model/: _fasttext.pyd  fasttext.py
src/: examples.py  fasttext_default.py  main.py  train.py  variable.py
src/fasttext/: .gitignore  .gitmodules  CMakeLists.txt  config.cmake  converter.py
src/fasttext/build-policy/: README.md  build_option.cmake  internal_utils.cmake  message.cmake  toolchain_settings.cmake
src/fasttext/build-policy/programs/: compression.py  extract_object.sh
src/fasttext/build-policy/toolchain/: ios.toolchain.cmake  mips.toolchain.cmake  rvct.toolchain.cmake  tizen.toolchain.cmake
src/fasttext/generate/: msvc_config.cmd  msvc_config_and_python.cmd  unix_config  unix_config_and_python
src/fasttext/src/: CMakeLists.txt
src/fasttext/src/cpp/: CMakeLists.txt  dictionary.cc  dictionary.h  fasttext.cc  fasttext.h  productquantizer.cc
src/fasttext/src/jsoncpp/: CMakeLists.txt
src/fasttext/src/python/: CMakeLists.txt  fasttext.i  fasttext_wrapper.cc  fasttext_wrapper.h
src/fasttext/tool/: CMakeLists.txt  main.cc
